# lean_communication_middleware

./: README.md  pyproject.toml
src/mqtt/: mqtt_publisher.py  mqtt_subscriber.py  usage.md
src/opcua/: opcua_client.py  opcua_server.py  usage.md
src/zmq/: zmq_publisher.py  zmq_subscriber.py
