[tool.poetry]
name = "lean-communication-middleware"
version = "0.1.0"
description = ""
authors = ["Kazuhide Uchida"]
license = "MIT"
readme = "README.md"
packages = [{include = "lean_communication_middleware"}]

[tool.poetry.dependencies]
python = "^3.8"
paho-mqtt = "^2.1.0"
opcua = "^0.98.13"
pyzmq = "^26.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
